@@ -15,6 +15,9 @@ Backported from 7.1.30
   . Fixed bug #78069 (Out-of-bounds read in iconv.c:_php_iconv_mime_decode()
     due to integer overflow). (CVE-2019-11039). (maris dot adam)
 
+- SQLite:
+  . Fixed bug #77967 (Bypassing open_basedir restrictions via file uris). (Stas)
+
 Backported from 7.1.29
 
 - EXIF
@@ -26,8 +29,8 @@ Backported from 7.1.28
 - EXIF:
   . Fixed bug #77753 (Heap-buffer-overflow in php_ifd_get32s). (CVE-2019-11034)
     (Stas)
-  . Fixed bug #77831 (Heap-buffer-overflow in exif_iif_add_value). 
-	(CVE-2019-11035) (Stas)
+  . Fixed bug #77831 (Heap-buffer-overflow in exif_iif_add_value).
+    (CVE-2019-11035) (Stas)
 
 - SQLite3:
   . Added sqlite3.defensive INI directive. (BohwaZ)
